<?xml version="1.0" encoding="utf-8"?>
<!-- Source https://developer.android.com/training/basics/firstapp -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="410dp"
        android:layout_height="44dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:ems="15"
        android:inputType="none|textPersonName"
        android:text="@string/intro"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="379dp"
        android:layout_height="525dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText">

        <Button
            android:id="@+id/Layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@color/medium_slate_blue"
            android:text="@string/linear_horizontal"
            android:textColor="@color/snow"
            android:textSize="20sp" />

        <Button
            android:id="@+id/Layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@color/medium_slate_blue"
            android:text="@string/grid"
            android:textColor="@color/snow"
            android:textSize="20sp" />

        <Button
            android:id="@+id/Layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@color/medium_slate_blue"
            android:text="@string/relative"
            android:textColor="@color/snow"
            android:textSize="20sp" />

        <Button
            android:id="@+id/Layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@color/medium_slate_blue"
            android:text="@string/table"
            android:textColor="@color/snow"
            android:textSize="20sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>